# mark-it

./: .gitignore  README.md  ans.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
e2e/: README.md  package.json  playwright.config.ts  tsconfig.json
e2e/tests/: 00-bootstrap.spec.ts  01-create-block.spec.ts  02-delete-block.spec.ts  03.0-expand.spec.ts  03.1-insert-plain.spec.ts  03.10-math-block.spec.ts  03.11-code-block.spec.ts  03.12-table-block.spec.ts  03.13-inline-rich.spec.ts  03.2-insert-special.spec.ts  03.3-paste-single.spec.ts  03.4-paste-split.spec.ts  03.5-delete-plain.spec.ts  03.6-delete-special.spec.ts  03.7-selection-replace.spec.ts  03.8-arrow-keys.spec.ts  03.9-tab.spec.ts  04-event-interception.spec.ts
e2e/tests/helpers/: editor.ts  globals.d.ts
playground/: index.html  package.json  tsconfig.json  vite.config.ts
playground/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
playground/desktop/electron/: icon.icns  main.cjs  preload.cjs
playground/desktop/src/: App.tsx  styles.css  vite-env.d.ts
playground/desktop/src-tauri/: Cargo.toml  tauri.conf.json
playground/desktop/src-tauri/capabilities/: default.json
playground/desktop/src-tauri/src/: lib.rs  main.rs
playground/src/: App.css  App.tsx  index.tsx
